[package]
name = "deno_doc_info_generator"
version = "0.1.0"
authors = ["Zeb Piasecki <zeb@zebulon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_doc = "0.4.0"
flate2 = "1.0.20"
futures = "0.3.15"
log = "0.4.14"
pretty_env_logger = "0.4.0"
replace_with = "0.1.7"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
swc_ecmascript = "0.33.0"
tar = "0.4.35"
thiserror = "1.0.25"
tokio = { version = "1.6.1", features = ["rt", "macros", "rt-multi-thread"] }
